--- a/HelloWorldAppNETReact/ClientApp/css/styles/board.scss
+++ b/HelloWorldAppNETReact/ClientApp/css/styles/board.scss
@@ -23,6 +23,21 @@ div.add-btn {
     border-radius: 0 4px 4px 0;
     cursor: pointer;
     transition: all ease-in-out .1s;
+    line-height: 50px;
+}
+
+div.new-note {
+    position: fixed;
+    top: 80px;
+    z-index: 5000;
+    transition: all ease-in-out .5s;
+
+    height: 240px;
+    width: 200px;
+    background-color: #fdfd96;
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.4);
+    margin: 5px;
+    font-family: Shadows Into Light, Arial;
 }
 
 div.add-btn:hover {
