--- a/HelloWorldAppNETReact/ClientApp/css/styles/stickynote.scss
+++ b/HelloWorldAppNETReact/ClientApp/css/styles/stickynote.scss
@@ -28,6 +28,39 @@ div.sticky-note-task {
     cursor: pointer;
 }
 
-.sticky-note-task i:hover + span.task-desc {
+.saved-task.sticky-note-task i:hover + span.task-desc {
     text-decoration: line-through;
+}
+
+div.note-footer {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    background: gray;
+    padding: 9px;
+    font-family: sans-serif;
+}
+
+div.new-note input[type="text"] {
+    background: transparent;
+    border: none;
+}
+
+div.new-note input.title {
+    font-size: 20px;
+}
+
+div.new-note input.task {
+    width: 140px;
+}
+
+div.new-note input[type="text"]:active,
+div.new-note input[type="text"]:focus,
+div.new-note input[type="text"]:visited {
+    border: none;
+    outline: none;
+}
+
+button.note-save-btn {
 }
