--- a/HelloWorldAppNETReact/ClientApp/css/styles/board.scss
+++ b/HelloWorldAppNETReact/ClientApp/css/styles/board.scss
@@ -6,8 +6,9 @@ div.board {
 }
 
 div.board-header{
+    padding: 10px;
     width: 100%;
-    height: 50px;
+    height: 55px;
     background: gray;
 }
 
@@ -16,3 +17,10 @@ div.notes-container {
     display: flex;
     flex-flow: row wrap;
 }
+
+/* VIEW SELECT */
+div.header-view-select {
+    margin: 0 0 0 100px;
+    width: 120px;
+}
+
