--- a/HelloWorldAppNETReact/ClientApp/css/styles/stickynote.scss
+++ b/HelloWorldAppNETReact/ClientApp/css/styles/stickynote.scss
@@ -69,14 +69,64 @@ div.delete-btn i {
 }
 
 /* CONFIRM DELETE NOTE */
-div.confirm-delete {
+div.confirm-action {
     position: relative;
     top: 20%;
     text-align: center;
+    font-family: sans-serif;
 }
-div.confirm-delete-msg {
+div.confirm-action-msg {
     padding: 20px 0;
 }
-div.confirm-delete-btn-holder button{
+div.confirm-action-btn-holder button {
     margin: 0 5px;
+}
+
+/* OPTIONS BAR and DIV */
+div.options-btn {
+    position: absolute;
+    left: 5px;
+    top: 0px;
+    height: 15px;
+    width: 15px;
+    cursor: pointer;
+    z-index: 1;
+    opacity: 0;
+}
+
+div.options-btn:hover {
+    transform: scale(1.2);
+}
+
+div.options-btn:active {
+    transform: scale(1);
+}
+
+div.options-div {
+    background-color: #f5f5f5;
+    position: absolute;
+    top: 0;
+    left: 0px;
+    min-height: 20px;
+    width: 100px;
+    cursor: pointer;
+    z-index: 5;
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.4);
+    font-family: sans-serif;
+    font-size: 12px;
+}
+
+div.options-div div{
+    padding: 5px;
+}
+div.options-div div:hover {
+    background-color: skyblue;
+}
+/* NOTE DETAILS */
+div.note-details {
+    font-family: sans-serif;
+}
+div.close-btn {
+    width: 15px;
+    cursor: pointer;
 }
